--- a/src/Android/build.gradle
+++ b/src/Android/build.gradle
@@ -1,22 +1,14 @@
 apply plugin: 'com.android.library'
 apply plugin: 'maven-publish'
 
-def githubProperties = new Properties()
-githubProperties.load(new FileInputStream(rootProject.file("github.properties")))
-
-def getVersionName = { ->
-    return "0.1.0"
-}
-
-def getArtificatId = { ->
-    return "gaia-motion-curve"
-}
-
 allprojects {
     repositories {
         // The order in which you list these repositories matter.
         google()
         jcenter()
+        maven {
+            url "https://jitpack.io"
+        }
     }
 }
 
@@ -24,6 +16,9 @@ buildscript{
     repositories{
         google()
         jcenter()
+        maven {
+            url "https://jitpack.io"
+        }
     }
 
     dependencies{
@@ -57,35 +52,32 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
-    libraryVariants.all { variant ->
-        variant.outputs.all { output ->
-            if (outputFile != null && outputFileName.endsWith('.aar')) {
-                outputFileName = "${getArtificatId()}-release.aar"
-            }
-        }
-    }
 }
 
-publishing {
-    publications {
-        bar(MavenPublication) {
-            groupId 'com.gaia.libraries'
-            artifactId getArtificatId()
-            version getVersionName()
-            artifact("$buildDir/outputs/aar/${getArtificatId()}-release.aar")
-        }
-    }
 
-    repositories {
-        maven {
-            name = "GitHubPackages"
+// Because the components are created only during the afterEvaluate phase, you must
+// configure your publications using the afterEvaluate() lifecycle method.
+afterEvaluate {
+    publishing {
+        publications {
+            // Creates a Maven publication called "release".
+            release(MavenPublication) {
+                // Applies the component for the release build variant.
+                from components.release
 
-            url = uri("https://maven.pkg.github.com/alibaba/gaia-motion-curve")
+                // You can then customize attributes of the publication as shown below.
+                groupId = 'com.github.alibaba'
+                artifactId = 'gaia-motion-curve'
+                version = '0.1.0'
+            }
+            // Creates a Maven publication called “debug”.
+            debug(MavenPublication) {
+                // Applies the component for the debug build variant.
+                from components.debug
 
-            credentials {
-                username = githubProperties['gpr.usr'] ?: System.getenv("GPR_USER")
-                password = githubProperties['gpr.key'] ?: System.getenv("GPR_API_KEY")
+                groupId = 'com.github.alibaba'
+                artifactId = 'gaia-motion-curve'
+                version = '0.1.0-DEV'
             }
         }
     }
